<resources>
    <string name="app_name">HackensackUMC Mobile Access</string>
    <string name="title_activity_hackensack_umc">HackensackUMC</string>
    <string name="title_activity_login">Login or Register</string>
    <string name="title_activity_doctor_search">Doctor Search</string>
    <string name="title_activity_doctor_result">Results</string>
    <string name="title_activity_doctor_filter">Filter</string>
    <string name="title_activity_symptom_checker">Symptom Checker</string>
    <string name="title_activity_doctor_detail">Doctor Details</string>
    <string name="title_activity_direction_maps">Map</string>
    <string name="title_activity_symptom_list">Symptom List</string>
    <string name="title_activity_favourite">My Doctors</string>
    <string name="title_activity_direction_list">Destinations</string>
    <string name="title_activity_Edit">Edit</string>
    <string name="title_activity_question">Verify</string>
    <string name="title_activity_appointment_summery">Appointment Summary</string>
    <string name="title_activity_view_appointment">Appointments</string>
    <string name="title_activity_doctor_schedule_appointment">Schedule Appointment</string>
    <string name="login_button_text">LOGIN</string>
    <string name="register_button_text">REGISTER</string>
    <string name="create_cred_text">Create Credentials</string>
    <string name="crete_cred_info_text">Existing patient, need to create credentials?</string>
    <string name="forgot_pass_text">Forgot Password?</string>
    <string name="register_patient_button_text">REGISTER AS NEW PATIENT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome to HackensackUMC</string>
    <string name="loading_text">Loading...</string>
 <string-array name="menuitem_guest_array">
        <item>Make Appointment</item>
        <item>Doctor Search</item>
        <item>Symptom Checker</item>
        <item>Directions</item>
    </string-array>
    <string-array name="menuitem_mychart_array">
        <item>Make Appointment</item>
        <item>My Appointments</item>
        <item>Doctor Search</item>
        <item>Symptom Checker</item>
        <item>Directions</item>
        <item>Test Results</item>
        <item>Health Reminders</item>
        <item>Messages</item>
        <item>Medication</item>
       
        <item>Health Summary</item>
        <item>My Chart Settings</item>
        <item>Billing</item>
    </string-array>
    <string name="guide_text">You can log in using username and password</string>
    <string name="appt_login_guide_text">You can log in using your MyChart login or Register as new patient to make this appointment</string>
    <string name="password_text">Password</string>
    <string name="username_text">Username/Email</string>
    <string name="guest_login_text">PROCEED AS GUEST</string>
    <string name="copy_right">Copyright\u00a9 2016</string>
    <string name="doctor_search_text">Provide at least one input criteria</string>
    <string name="firstname_text">First Name</string>
    <string name="lastname_text">Last Name</string>
    <string name="search_doctor_text">Search Doctor</string>
    <string name="filter_search_text">Filter Search</string>
    <string name="search_text">Search</string>
    <string name="reset_text">Reset data</string>
    <string name="speciality">Speciality</string>
    <string name="zip_code">Zip Code</string>
    <string name="search_with_in_text">Search within</string>
    <string name="gender">Gender</string>
    <string name="location_text">Location</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="child">CHILD</string>
    <string name="find_doctor">Find Doctors</string>
    <string name="complaints">Complaints</string>
    <string name="suggested_specialties">Suggested Specialties</string>
    <string name="my_doctor">My Doctors</string>
    <string-array name="search_with_in_array">
        <item>5 Miles</item>
        <item>10 Miles</item>
        <item>20 Miles</item>
        <item>50 Miles</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="favorite">FAVORITE</string>
    <string name="call">CALL</string>
    <string name="directions">DIRECTION</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>
	<string name="button_no">NO</string>
    <string name="button_yes">YES</string>
    <string-array name="specialty_array">
        <item>"Select Speciality</item>
    </string-array>
    <string-array name="planets_array">
        <item>"Speciality</item>
        <item>Podiatry</item>
        <item>Pedodontics</item>
        <item>Infectious Diseases</item>
        <item>Dentistry - General</item>
        <item>Orthopaedic Pediatric</item>
        <item>Dentistry - Endodontics</item>
        <item>Pediatric Primary Care</item>
        <item>Dentistry - Oral Surgery</item>
        <item>Gynecologic &amp;amp; Breast Pathology"</item>
        <item>"Pediatric Emergency Medicine</item>
        <item>Laparascopic Surgery</item>
        <item>Thoracic Surgery</item>
        <item>Obstetrics &amp; Gynecology</item>
        <item>Pain &amp; Palliative Medicine</item>
        <item>Vascular Surgery</item>
        <item>Pediatric Urology</item>
        <item>Pediatric Hematology &amp; Oncology</item>
        <item>Surgery General"</item>
        <item>"Orthopaedic Spine</item>
        <item>Anesthesiology</item>
        <item>Reproductive Endocrinology &amp; Infertility</item>
        <item>Pediatric Intensive Care</item>
        <item>Child &amp; Adolescent Psychiatry</item>
        <item>Orthopaedic General</item>
        <item>Maternal Fetal Medicine</item>
        <item>Family Medicine</item>
        <item>Neuro - Oncology Oncology</item>
        <item>"Orthopaedic Foot &amp; Ankle</item>
        <item>Oculoplastics - Ophthalmology</item>
        <item>Wound Center</item>
        <item>Oncology</item>
        <item>Dentistry - Oral &amp; Maxillofacial Surgery</item>
        <item>Pathology</item>
        <item>Pediatric Cardiology</item>
        <item>Podiatry Foot</item>
        <item>Pediatric Dermatology</item>
        <item>Clinical Cardiac Electrophysiology</item>
        <item>Neuro - Ophthalmology</item>
        <item>Hand Surgery</item>
        <item>Family Practice</item>
        <item>Pediatric Endocrinology &amp; Diabetes</item>
        <item>Pediatrics Ophthalmology</item>
        <item>Pediatric Gastroenterology &amp; Nutrition</item>
        <item>Orthopaedic Hand</item>
        <item>Pediatric Otolaryngology</item>
        <item>Pediatric Nephrology</item>
        <item>Urology",</item>
        <item>"Radiology</item>
        <item>Gynecology</item>
        <item>Pediatric Developmental &amp; Behavioral</item>
        <item>Bariatric Surgery</item>
        <item>Hematology &amp; Oncology</item>
        <item>Genetics</item>
        <item>Pediatric Critical Care</item>
        <item>Ophthalmology</item>
        <item>Internal Medicine - General</item>
        <item>Rheumatology &amp; Arthritis</item>
        <item>Orthopaedic Trauma",</item>
        <item>"Neurosurgery</item>
        <item>Dermatology</item>
        <item>Hip &amp; Knee Replacement</item>
        <item>Critical Care</item>
        <item>Orthopaedic Oncology</item>
        <item>Radiation Oncology</item>
        <item>Emergency Medicine</item>
        <item>Breast Surgery</item>
        <item>Otolaryngology - General</item>
        <item>Pediatric Neurosurgery</item>
        <item>Orthopaedic Knee-Shoulder-Sports",</item>
        <item>"Surgery Transplant</item>
        <item>Trauma / Critical Care / Injury Prevention Surgery</item>
        <item>Cardiac Surgery</item>
        <item>Psychology</item>
        <item>Neurology</item>
        <item>Dentistry - Prosthodontics</item>
        <item>Pediatric Neurology</item>
        <item>Pulmonary Disease</item>
        <item>Gastroenterology</item>
        <item>Pediatric Ophthalmology</item>
        <item>Ophthalmology - General",</item>
        <item>"Geriatric Medicine</item>
        <item>Pediatric General</item>
        <item>Gynecology &amp; Oncology</item>
        <item>Pediatric Surgery</item>
        <item>Neonatology</item>
        <item>Surgery Oncology</item>
        <item>Organ Transplantation Services - Surgery</item>
        <item>Interventional Cardiology</item>
        <item>Pediatric Pulmonology</item>
        <item>Colon &amp; Rectal Surgery</item>
        <item>Plastic Surgery",</item>
        <item>"Cardiology</item>
        <item>Retinal Surgery</item>
        <item>Nephrology</item>
        <item>Psychiatry</item>
        <item>Dentistry - Orthodontics</item>
        <item>Allergy &amp; Immunology</item>
        <item>Physical Medicine &amp; Rehabilitation</item>
        <item>Genitourinary &amp; Gynecologic Pathology</item>
        <item>Pediatric Rheumatology&amp; Arthritis</item>
        <item>Endocrinology</item>
        <item>Pediatric Infectious Disease</item>
        <item>Pediatric Blood &amp; Marrow Transplantation"</item>
    </string-array>
    <string name="normalBtn">Map</string>
    <string name="hybridBtn">Hybrid</string>
    <string name="sateliteBtn">Satellite</string>
    <string name="optionsBtn">Options</string>
    <string name="currLoc">Current Location</string>
    <string name="homeAddr">Home Address</string>
    <string name="workAddr">Work Address</string>
    <string name="otherAddr">Other Address</string>
    <string name="cancel">Cancel</string>
    <string name="home_add">Home Address</string>
    <string name="work_add">Work Address</string>
    <string name="other_add">Other Address</string>
    <string name="curr_loc">Current Location</string>
    <string name="hacensack_addr">HackensackUMC</string>
    <string name="arrow_up">\ue904</string>
    <string name="arrow_left">\ue901</string>
    <string name="arrow_left_curve">\ue900</string>
    <string name="straight_arrow_up">\ue902</string>
    <string name="arrow_down">\ue903</string>
    <string name="tap_to_dismiss">Tap anywhere to dismiss</string>
    <string name="direction_help_text">You can view and\n get directions to\n these quick\n locations</string>
    <string name="drawer_help_text">View Your Profile,\nand more information regarding\n ER Wait Time,\nAbout the Hospital, HackensackUMC News</string>
    <string name="landing_apt_help_text">Make an appointment\n to get registered</string>
    <string name="landing_sym_help_text">Check and diagnose\n symptoms</string>
    <string name="apt_sum_help_text">Existing users proceed to \'Login\' \nto make appointment\n\nNew users proceed to \'Register as New Patient\' to make an appointment</string>
	<string name="doc_search_filter_help_text">Hint: Filter to narrow\n down search results</string>
    <string name="doc_search_fav_help_text">Mark as favorites\n will add to \"My Doctors\" </string>
    <string name="sym_body_help_text">Select an area\n to see related\n symptoms</string>
    <string name="sym_tab_help_text">Hint: You can also\n change the view\n to back</string>
    <string name="instructions">Instructions</string>
    <string name="profile_suggestion_text_1">Welcome to registration process!</string>
    <string name="profile_suggestion_text_2">Lets follow a series of steps to register basic information.</string>
    <string name="profile_suggestion_text_3">We will need your Driver\'s License and Insurance Card kept ready at the moment.</string>
    <string name="profile_suggestion_text_4">We will also take a \'Selfie\'</string>
    <string name="coach_marks_profile_text">Coach marks are available for the first time use. If you want it later , enable it in the App settings.</string>
    <string name="steps">Steps</string>
</resources>