<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/doc_result_help_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/help_bg_color">

    <RelativeLayout
        android:id="@+id/filter_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/filter_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/filter_arrow"
            android:gravity="right"
            android:text="@string/doc_search_filter_help_text"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_font_small" />

        <TextView
            android:id="@+id/filter_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/arrow_up"
            android:textColor="#3e9e33"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fav_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fav_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fav_arrow"
            android:gravity="left"
            android:text="@string/doc_search_fav_help_text"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_font_small" />

        <TextView
            android:id="@+id/fav_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:text="@string/straight_arrow_up"
            android:textColor="#3e9e33"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tap_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/tap_to_dismiss"
        android:textColor="@color/tap_dismiss_color"
        android:textSize="@dimen/txt_font_small" />
</RelativeLayout>